<resources>
    <string name="app_name">Google Books App</string>
    <string name="bookFinderLabelString">Escriba el texto a buscar</string>
    <string name="bookFinderTitlePlaceholder">Título</string>
    <string name="bookFinderAutPlaceholder">Autor</string>
    <string name="radioBookText">Libros</string>
    <string name="radioMagazineText">Revistas</string>
    <string name="radioBothText">Ambos</string>
    <string name="findButtonText">Buscar</string>
    <string name="isLoading">Cargando resultados...</string>
    <string name="resultadosText">Resultados</string>
    <string name="noResultadosText">No se encontraron resultados</string>
    <string name="noAutText">autor anónimo</string>
</resources>